message SearchIndex {
  optional bytes name = 1;
  enum SerFormat {
    JSON_IMPORT = 0;
    PICKLE = 1;
  }
  optional SerFormat feature_format = 2 [default = JSON_IMPORT];
  optional SerFormat hash_format = 3 [default = JSON_IMPORT];
  optional SerFormat index_format = 4 [default = JSON_IMPORT];
  optional double creation_time = 5;
  optional int32 part_num = 6;
  optional int32 num_parts = 7;
  optional bytes feature = 8;
  optional bytes hash = 9;
  optional bytes index = 10;
  repeated bytes metadata = 11;
}

message Classifier {
  optional bytes name = 1;
  enum SerFormat {
    JSON_IMPORT = 0;
    PICKLE = 1;
  }
  optional SerFormat feature_format = 2 [default = JSON_IMPORT];
  optional SerFormat classifier_format = 3 [default = JSON_IMPORT];
  optional double creation_time = 4;
  optional bytes feature = 5;
  optional bytes classifier = 6;
}

message NDArray {
  required bytes data = 1;
  repeated int32 shape = 2;
  required string dtype = 3;
}
